versioned_docs/version-4.0/indexes/using-term-vectors.mdx
---
title: "Indexes: Term Vectors"
hide_table_of_contents: true
sidebar_label: Term Vectors
sidebar_position: 27
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Indexes: Term Vectors
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="">

* A [Term Vector](https://en.wikipedia.org/wiki/Vector_space_model) is a representation of a text document 
  as a vector of identifiers.  
* A term vector can be used for similarity searches, information filtering, information retrieval, and indexing.  
* In RavenDB, features like [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) leverage 
  term vectors to accomplish their goals.

* In this page:
   * Creating an index that enables term vectors  

</Admonition>


To create an index and enable Term Vectors on a specific field we can create an index using  
the `AbstractIndexCreationTask`, then specify the term vectors there, or define our term vectors 
in the `IndexDefinition` (directly or using the `IndexDefinitionBuilder`).

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="csharp">
{`public class BlogPosts_ByTagsAndContent : AbstractIndexCreationTask<BlogPost>
{
    public BlogPosts_ByTagsAndContent()
    {
        Map = users => from doc in users
                       select new
                       {
                           doc.Tags,
                           doc.Content
                       };

        Indexes.Add(x => x.Content, FieldIndexing.Search);
        TermVectors.Add(x => x.Content, FieldTermVector.WithPositionsAndOffsets);
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Operation" label="Operation">
<CodeBlock language="csharp">
{`IndexDefinitionBuilder<BlogPost> indexDefinitionBuilder =
    new IndexDefinitionBuilder<BlogPost>("BlogPosts/ByTagsAndContent")
    {
        Map = users => from doc in users
                       select new
                       {
                           doc.Tags,
                           doc.Content
                       },
        Indexes =
        {
            { x => x.Content, FieldIndexing.Search }
        },
        TermVectors =
        {
            { x => x.Content, FieldTermVector.WithPositionsAndOffsets }
        }
    };

IndexDefinition indexDefinition = indexDefinitionBuilder
    .ToIndexDefinition(store.Conventions);

store.Maintenance.Send(new PutIndexesOperation(indexDefinition));
`}
</CodeBlock>
</TabItem>
</Tabs>

The available Term Vector options are:

<TabItem value="term_vectors_3" label="term_vectors_3">
<CodeBlock language="csharp">
{`public enum FieldTermVector
\{
    /// <summary>
    /// Do not store term vectors
    /// </summary>
    No,

    /// <summary>
    /// Store the term vectors of each document. A term vector is a list of the document's
    /// terms and their number of occurrences in that document.
    /// </summary>
    Yes,

    /// <summary>
    /// Store the term vector + token position information
    /// </summary>
    WithPositions,

    /// <summary>
    /// Store the term vector + Token offset information
    /// </summary>
    WithOffsets,

    /// <summary>
    /// Store the term vector + Token position and offset information
    /// </summary>
    WithPositionsAndOffsets
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="java">


[Term Vector](https://en.wikipedia.org/wiki/Vector_space_model) is a representation of a text document as a vector of identifiers that can be used for similarity searches, information filtering, information retrieval, and indexing. In RavenDB the feature like [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) is leveraging the term vectors to accomplish its purposes.

To create an index and enable Term Vectors on a specific field we can create an index using  the `AbstractIndexCreationTask`, then specify the term vectors there, or define our term vectors in the `IndexDefinition` (directly or using the `IndexDefinitionBuilder`).

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="java">
{`public static class BlogPosts_ByTagsAndContent extends AbstractIndexCreationTask {
    public BlogPosts_ByTagsAndContent() {
        map = "docs.Posts.Select(post => new { " +
            "    Tags = post.Tags, " +
            "    Content = post.Content " +
            "})";

        index("Content", FieldIndexing.SEARCH);
        termVector("Content", FieldTermVector.WITH_POSITIONS_AND_OFFSETS);
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Operation" label="Operation">
<CodeBlock language="java">
{`IndexDefinitionBuilder builder = new IndexDefinitionBuilder("BlogPosts/ByTagsAndContent");
builder.setMap("docs.Posts.Select(post => new { " +
    "    Tags = post.Tags, " +
    "    Content = post.Content " +
    "})");

builder.getIndexesStrings().put("Content", FieldIndexing.SEARCH);
builder.getTermVectorsStrings().put("Content", FieldTermVector.WITH_POSITIONS_AND_OFFSETS);

IndexDefinition indexDefinition = builder.toIndexDefinition(store.getConventions());

store.maintenance().send(new PutIndexesOperation(indexDefinition));
`}
</CodeBlock>
</TabItem>
</Tabs>

The available Term Vector options are:

<TabItem value="term_vectors_3" label="term_vectors_3">
<CodeBlock language="java">
{`public enum FieldTermVector \{
    /**
     * Do not store term vectors
     */
    NO,

    /**
     * Store the term vectors of each document. A term vector is a list of the document's
     * terms and their number of occurrences in that document.
     */
    YES,
    /**
     * Store the term vector + token position information
     */
    WITH_POSITIONS,
    /**
     * Store the term vector + Token offset information
     */
    WITH_OFFSETS,

    /**
     * Store the term vector + Token position and offset information
     */
    WITH_POSITIONS_AND_OFFSETS
\}
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="nodejs">


[Term Vector](https://en.wikipedia.org/wiki/Vector_space_model) is a representation of a text document as a vector of identifiers that can be used for similarity searches, information filtering, information retrieval, and indexing. In RavenDB the feature like [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) is leveraging the term vectors to accomplish its purposes.

To create an index and enable Term Vectors on a specific field we can create an index using  the `AbstractIndexCreationTask`, then specify the term vectors there, or define our term vectors in the `IndexDefinition` (directly or using the `IndexDefinitionBuilder`).

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="js">
{`class BlogPosts_ByTagsAndContent extends AbstractIndexCreationTask {
    constructor() {
        super();

        this.map = \`docs.Posts.Select(post => new {     
            tags = post.tags,     
            content = post.content 
        })\`; 

        this.index("content", "Search");
        this.termVector("content", "WithPositionsAndOffsets");
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Operation" label="Operation">
<CodeBlock language="js">
{`const builder = new IndexDefinitionBuilder("BlogPosts/ByTagsAndContent");
builder.map = \`docs.Posts.Select(post => new {     
    tags = post.tags,     
    content = post.content 
})\`; 

builder.indexesStrings["content"] = "Search";
builder.termVectorsStrings["content"] = "WithPositionsAndOffsets";

const indexDefinition = builder.toIndexDefinition(store.conventions);

await store.maintenance.send(new PutIndexesOperation(indexDefinition));
`}
</CodeBlock>
</TabItem>
</Tabs>

The available Term Vector options are:

| Term Vector | |
| ----------- | - |
| `"No"` | Do not store term vectors |
| `"Yes"` | Store the term vectors of each document. A term vector is a list of the document's terms and their number of occurrences in that document. |
| `"WithPositions"` | Store the term vector + token position information |
| `"WithOffsets"` | Store the term vector + token offset information |
| `"WithPositionsAndOffsets"` | Store the term vector + token position and offset information |


</LanguageContent>

<!---
### Indexes
- [Boosting](../indexes/boosting)
- [Analyzers](../indexes/using-analyzers)
- [Storing Data in Index](../indexes/storing-data-in-index)
- [Dynamic Fields](../indexes/using-dynamic-fields)


-->